# ForLLM

./: .gitignore  codebase_map.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  specs_map.json
src/backend/: pyproject.toml
src/backend/app/: __init__.py  main.py  worker.py
src/backend/app/core/: __init__.py  api.py  application.py  domain.py  infrastructure.py  seeding.py
src/backend/app/modules/: __init__.py
src/backend/app/modules/Cart/api/: routes.py
src/backend/app/modules/Cart/domain/: models.py
src/backend/app/modules/Cart/infrastructure/: persistence.py
src/backend/app/modules/CustomerAccess/api/: routes.py
src/backend/app/modules/CustomerAccess/application/: services.py
src/backend/app/modules/CustomerAccess/domain/: models.py
src/backend/app/modules/CustomerAccess/infrastructure/: persistence.py
src/backend/app/modules/MenuCatalog/: __init__.py
src/backend/app/modules/MenuCatalog/api/: routes_internal.py
src/backend/app/modules/MenuCatalog/domain/: models.py
src/backend/app/modules/MenuCatalog/infrastructure/: persistence.py
src/backend/app/modules/Ordering/api/: routes.py  routes_internal.py
src/backend/app/modules/Ordering/application/: services.py
src/backend/app/modules/Ordering/domain/: models.py
src/backend/app/modules/Ordering/infrastructure/: persistence.py
src/backend/app/modules/Platform/: __init__.py
src/backend/app/modules/Platform/api/: routes.py
src/backend/app/modules/Stations/: __init__.py
src/backend/app/modules/Tables/: __init__.py
src/backend/app/modules/Tenancy/: __init__.py
(+97 files in other folders)
